--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 		<p>
 			 <i> Victoria </i> is from Fort Worth Texas. <br> 
 			</p>
-			<article> <img src="file:///Macintosh%20HD/Users/victoriaribeiro/Desktop/html1v/assets/images'/1162px-Texas_flag_map.svg.png" width="400" alt="Texas icon"</article>
+			<article> <img src= "1162px-Texas_flag_map.svg.png"="Texas icon"</article>
 				<article>
 				<p>
 				
 				<i> Victoria </i> recently graduated from Oklahoma State University.
 				<p>
-				<article> <img src="file:///Macintosh%20HD/Users/victoriaribeiro/Desktop/html1v/assets/images'/2000px-Oklahoma_State_University_logo.svg.png"width="400" alt="Osu logo"</article>
+				<article> <img src= "edmondlow.jpg"</article>
 					</p>
 					<i> Victoria </i> loves to travel to cities big and small. <br>
 					<p>
-					<article> <img src="file:///Macintosh%20HD/Users/victoriaribeiro/Desktop/html1v/assets/images'/35mm-aerial-analog-1105766.jpg" width="400" alt="skyscraper photo"</article>
+					<article> <img src="assets/images'/35mm-aerial-analog-1105766.jpg" </article>
 						  </p>
 					<article></article>
 					</section>
